src/DetailsView/components/nav-link-button.scss
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
@import '../../common/styles/common.scss';
a,
button {
    &.nav-link-button {
        width: calc(100% - #{$pivotItemLeftBorderWidth});
        padding-left: unset;
        &:hover,
        &:active,
        &:focus,
        &:active:hover {
            text-decoration: none;
        }
    }
}

